--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
        
         <div class="bg-white p-3 mt-2 rounded-3 shadow">
           <div class="row">
-            <div class="col-6 pe-1 position-relative">
+            <div class="col-sm-6 pe-1 position-relative">
               <div id="dep_row">
               <label>Destination</label>
                 <div class="form-control holiday-desti rounded-2" id="dep-dest">Where are you going?</div>
@@ -145,7 +145,7 @@
                 </ul>
               </div>
             </div>
-            <div class="col-4 ps-1 pe-1 position-relative" id="dep-date">
+            <div class="col-sm-4 ps-1 pe-1 position-relative" id="dep-date">
             <label>Travel Date</label>
               <div class="holiday-date rounded-2" ><span id="dDate">Check-in</span>&nbsp;<span id="dMonth" class="month">JUN</span>&nbsp;<span id="dyear" class="year">23</span></div>
                   <!-- calendar pop up-->
@@ -158,7 +158,7 @@
                   </div>
             </div>
             
-            <div class="col-2 ps-1">
+            <div class="col-sm-2 ps-1">
             <label></label>
               <button class="btn btn-lg global-btn holiday-s-btn w-100">Search</button>
             </div>
