--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
 	<div class="container-fluid p-0">
     	<div class="row m-0">
         	<div class="col-4 p-0 border-end">
-            	<a href="#" class="active"><img src="images/plane.svg" height="40" class="m-auto d-block"><span>Flight</span></a>
+            	<a href="#" ><img src="images/plane.svg" height="40" class="m-auto d-block"><span>Flight</span></a>
             </div>
-            <div class="col-4 border-end">
+            <div class="col-4 p-0 border-end">
             	<a href="#"><img src="images/hotel.svg" height="42" class="m-auto d-block"><span>Stay</span></a>
             </div>
-            <div class="col-4">
-            	<a href="#"><img src="images/beach.svg" height="42" class="m-auto d-block"><span>Holidays</span></a>
+            <div class="col-4 p-0">
+            	<a href="#" class="active"><img src="images/beach.svg" height="42" class="m-auto d-block"><span>Holidays</span></a>
             </div>
         </div>
     </div>
 </div>
 
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+<div id="carouselExampleControls" class="carousel holiday-carousel slide" data-bs-ride="carousel">
 
   <div class="carousel-inner position-relative">
   
@@ -169,7 +169,7 @@
   </div>
 </section>
 
-<div class="container pb-5">
+<div class="container pb-md-5">
             <div class="row">
                 <div class="col-md-3">
                     <div class="d-flex mb-4 mb-lg-0">
