--- a/holiday-details.html
+++ b/holiday-details.html
@@ -176,7 +176,7 @@
                             <h3 class="fw-bold mb-0 pb-0">&#163; 11,990</h3>
                             <p class="small text-light opacity-50">per person on twin sharing</p>
                         </div>
-                        <div class="col-6"><a href="#" id="enq-now" class="btn btn-lg global-btn mt-3 w-100">Enquire Now</a></div>
+                        <div class="col-6"><a href="#" id="enq-now" class="btn btn-lg global-btn enq-btn mt-3 w-100">Enquire Now</a></div>
                      </div>
                 </div>
             </div>
@@ -199,9 +199,9 @@ BookOtrip assures you on substantial measures for your safety including sanitize
 	<div class="container">
     	<nav>
           <div class="nav nav-tabs" id="nav-tab" role="tablist">
-            <button class="nav-link border me-2 p-3 active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Itinerary</button>
-            <button class="nav-link me-2 p-3 border" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Inclusions / exclusion</button>
-            <button class="nav-link me-2 p-3 border" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Terms & conditions</button>
+            <button class="nav-link border me-md-2 p-md-3 active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Itinerary</button>
+            <button class="nav-link me-md-2 p-md-3 border" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Inclusions / exclusion</button>
+            <button class="nav-link me-md-2 p-md-3 border" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Terms & conditions</button>
           </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
@@ -401,16 +401,16 @@ BookOtrip assures you on substantial measures for your safety including sanitize
             	<p class="text-center">Enter your contact details and we will plan the best holiday suiting all your requirements.</p>
             </div>
             <div class="row">
-            	<div class="col-6 mb-3">
+            	<div class="col-sm-6 mb-3">
                 	<input name="" type="text" class="form-control" placeholder="Your Name">
                 </div>
-                <div class="col-6 mb-3">
+                <div class="col-sm-6 mb-3">
                 	<input name="" type="text" class="form-control" placeholder="Your Email">
                 </div>
-                <div class="col-6 mb-3">
+                <div class="col-sm-6 mb-3">
                 	<input name="" type="text" class="form-control" placeholder="Mobile Number">
                 </div>
-                <div class="col-6 mb-3">
+                <div class="col-sm-6 mb-3">
                 	<select  class="form-control">
                   <option  value="">Select Your city</option>
                  
@@ -1426,10 +1426,10 @@ BookOtrip assures you on substantial measures for your safety including sanitize
                 </select>
                 </div>
                 
-                <div class="col-6 mb-3">
+                <div class="col-sm-6 mb-3">
                 	<input name="" type="text" class="form-control" placeholder="Date of Travel">
                 </div>
-                 <div class="col-6 mb-3">
+                 <div class="col-sm-6 mb-3">
                 	<input name="" type="text" class="form-control" placeholder="Number of Travelers">
                 </div>
             </div>
