--- a/holiday-details.html
+++ b/holiday-details.html
@@ -64,13 +64,13 @@
 	<div class="container-fluid p-0">
     	<div class="row m-0">
         	<div class="col-4 p-0 border-end">
-            	<a href="#" class="active"><img src="images/plane.svg" height="40" class="m-auto d-block"><span>Flight</span></a>
+            	<a href="#" ><img src="images/plane.svg" height="40" class="m-auto d-block"><span>Flight</span></a>
             </div>
-            <div class="col-4 border-end">
+            <div class="col-4 p-0 border-end">
             	<a href="#"><img src="images/hotel.svg" height="42" class="m-auto d-block"><span>Stay</span></a>
             </div>
-            <div class="col-4">
-            	<a href="#"><img src="images/beach.svg" height="42" class="m-auto d-block"><span>Holidays</span></a>
+            <div class="col-4 p-0">
+            	<a href="#" class="active"><img src="images/beach.svg" height="42" class="m-auto d-block"><span>Holidays</span></a>
             </div>
         </div>
     </div>
